<resources>
    <string name="app_name">AnimalPlay</string>
    <string name="action_settings">Settings</string>
    <string name="question_text">This is Animal %1$d of %2$d</string>
    <string name="number_of_guesses_title">Number of Guesses</string>
    <string name="number_of_guesses_description">Show 2,4 or 6 guess options</string>
    <string name="number_of_guesses_dialog_title">Choose number of guesses to Display</string>
    <string name="animal_types_title">Animals</string>
    <string name="animal_types_description">Types of animals that you can include in the Play</string>
    <string name="choose_background_color">Choose background Color</string>
    <string name="choose_color_description">Choose one of these colors as the background Color</string>
    <string name="default_color_black">Black</string>
    <string name="choose_font">Font for Quiz</string>
    <string name="choose_font_description">Choose one of these Fonts for Quiz</string>
    <string name="default_font">EmilysCandy-Regular.ttf</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <plurals name="result_string_value">
        <item quantity="one">%1$d guess, and %2$.02f%% correct</item>
        <item quantity="other">%1$d number of guesses, and %2$.02f%% correct</item>
    </plurals>
    <!--<string name="result_string_value">%1$d number of guesses, and %2$.02f%% correct</string>-->
    <string name="reset_animal_play">RESET THE ANIMAL PLAY</string>
    <string name="wrong_answer_message">No</string>
    <string name="default_animal_type">Wild_Animals</string>
    <string name="default_animalType_toast_message">One Type of Animals must be selected. The Default Value is Wild Animals</string>
    <string name="setting_Changed_toast_message">New Changes were Applied</string>
    <string name="summary_dialog_title">Congratulations!!!</string>
    <string name="animal_image_content_desc">Animal Image</string>
    <string name="sammary_result_dialog_title">AnimalPlay Results</string>
    <string name="choose_image_type">Choose Image Type</string>
    <string name="choose_image_type_description">Choose the type of image to display</string>
    <string name="default_image_type">0</string>
    <string name="reset_round_title">Reset Round</string>
    <string name="reset_round_description">Enjoy a new Round!!</string>

</resources>

